# pollub-wdso-2

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  config.status  configure  configure.ac  configure.scan  libarea.la  libtool  libvolume.la  wdso2
.libs/: libarea.la  libarea.lai  libarea.so.0  libarea.so.0.0.0  libvolume.la  libvolume.lai  libvolume.so.0  libvolume.so.0.0.0
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
include/: area.h  volume.h
src/: area.c  area.lo  main.c  volume.c  volume.lo
src/.deps/: area.Plo  main.Po  volume.Plo
